--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 /*
 Theme Name: Themosis
-Theme URI: https://framework.themosis.com/
-Author: Themosis
-Author URI: https://www.themosis.com/
+Author: Digital Brew
+Author URI: https://digitalbrew.io
 Description: The Themosis framework base theme.
-Version: 2.0.0
+Version: 4.1.0
 License: GPL-2.0-or-later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: easy, organized, expressive.
